--- a/crawler-node/src/main/resource/mango.properties
+++ b/crawler-node/src/main/resource/mango.properties
@@ -1,5 +1,6 @@
 mongo.host=localhost
 mongo.port=27017
+mango.dbname=crawler
 
 mongo.connectionsPerHost=8
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
