--- a/crawler-node/src/main/resource/log4j.properties
+++ b/crawler-node/src/main/resource/log4j.properties
@@ -17,14 +17,14 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=[crawler]%-d{HH:mm:ss SSS} %5p (%c:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[node]%-d{HH:mm:ss SSS} %5p (%c:%L) - %m%n
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.File=logs/sample.log
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=[crawler]%-d{yyyy-MM-dd HH:mm:ss SSS} [%c]-[%p] %m%n
+log4j.appender.file.layout.ConversionPattern=[node]%-d{yyyy-MM-dd HH:mm:ss SSS} [%c]-[%p] %m%n
 
 # Print only messages of level INFO or above in the package noModule.
 log4j.logger.noModule=FATAL
