--- a/crawler-node/src/main/resource/conf.properties
+++ b/crawler-node/src/main/resource/conf.properties
@@ -1,2 +1,8 @@
 # the node name
 crawler.node.name=worker-1
+
+# heartbeat interval
+crawler.node.reportInterval=10
+
+# request task interval
+crawler.node.requestInterval=30
