--- a/crawler-node/pom.xml
+++ b/crawler-node/pom.xml
@@ -274,6 +274,17 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<!-- webmagic -->
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-core</artifactId>
+			<version>0.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-extension</artifactId>
+			<version>0.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
