--- a/crawler-node/src/main/resource/conf.properties
+++ b/crawler-node/src/main/resource/conf.properties
@@ -6,3 +6,8 @@ crawler.node.reportInterval=10
 
 # request task interval
 crawler.node.requestInterval=30
+
+
+
+# max retry
+cralwer.node.taskmanager.maxretry=5
