--- a/crawler-node/src/main/resource/conf.properties
+++ b/crawler-node/src/main/resource/conf.properties
@@ -11,3 +11,9 @@ crawler.node.requestInterval=30
 
 # max retry
 cralwer.node.taskmanager.maxretry=5
+
+
+# strategy limit
+crawler.node.strategy.downloadLimit=2
+crawler.node.strategy.pageParseLimit=2
+
